--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,26 @@
   </head>
   <body class="container">
     <button id="complimentButton">Get a compliment</button>
-    <button id="fortuneButton">Get your Fortune</button>
+    <button id="fortuneButton">Get your Fortune</button><br>
+    <form>
+    <h2>Pick Your Favorite Tapir!</h2>
+    <input id="Bairds" type="radio" name="favTapir" value="baird">
+    <label for="Bairds">Baird's Tapir</label>
+    <input id="Lowland" type="radio" name="favTapir" value="low">
+    <label for="Lowland">Lowland Tapir</label>
+    <input id="Mountain" type="radio" name="favTapir" value="mount">
+    <label for="Mountain">Mountain Tapir</label>
+    <input id="Malayan" type="radio" name="favTapir" value="malay">
+    <label for="Malayan">Malayan Tapir</label>
+  </form><br>
+  <form id="signUp">
+    <h2>Sign Up For Our Newsletter!</h2>
+    <input type="email" id="mail">
+    <input type="text" id="firstname">
+    <button id="newsletter">Sign Up</button>
+  </form>
 
+  
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="main.js"></script>
     
